Revision history for Text-Table-Read-RelationOn-Tiny

v2.2.2     2022/04/11
           If pedantic is true, then first cheack indetation of a row
           Added tests

v2.2.1     2022/04/09
           Some fixes in POD section.

v2.2.0     2022/04/08
           Add named argument 'pedantic' to get() to enable table format checking.

v2.1.0     2021/06/28
           Added constructor options 'ext' and 'elem_id' allowing to use external data

v2.0.1     2021/06/27
           Fixed minor bug and completed description of constructor arguments 'inc' amd 'noinc'.

v2.0.0     2021/06/25
           Completely reworked code.
           Removed methods 'x_elem_ids', 'n_elems' and 'bless_matrix'.
           Added methods 'eq_ids', 'tab_elems' and 'matrix_named'.
           Constructor argument 'set' with subarray: changed structure of 'elem_ids' and 'elems'.
           Constructor: added named argument 'eqs'.
           Method 'get': use named arguments now and added named argument 'allow_subset'.
           Method 'matrix': added named argument 'bless'.

v1.2.0     2021/06/13
           Added method bless_matrix.

v1.1.1     2021/06/07
           Corrected version info.

v1.1.0     2021/06/07
           Implemented new feature (duplicates).

v1.0.3     2021/05/28
           Improved error messages and fixed problem in error case test script.

v1.0.2     2021/05/26
           Consequently use quotes in error messages.

v1.0.1     2021/05/26
           Switch to modern version string using version 0.77

1.00.00.00 2021/05/25
           New version number hopefully resolves a versioning problem with PAUSE

0.10.2     2021/05/24
           Added forgotten META.json to distribution

0.10.1     2021/05/24
           Added info about new github repo
           Use version format m.m.p (major.minor.patch).

0.10       2021/05/24
           Adapted Makefile.PL: deps, especially min version of perl
           Version is now artistic_2