@@ -1,6 +1,7 @@
 Revision history for Text-Table-Read-RelationOn-Tiny
 
 v2.2.2     2022/04/11
+           Added subsection PITFALLS to POD
            If pedantic is true, then first cheack indetation of a row
            Added tests
 
